--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Load Image" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Click="LoadImage_Click"/>
-        <Button Content="Save Image" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Click="SaveImage_Click" Margin="105,0,0,0"/>
+        <Button Content="Load Image" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Click="LoadImage_Click" Margin="10, 5, 0, 0"/>
+        <Button Content="Save Image" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Click="SaveImage_Click" Margin="115,5,0,0"/>
 
-        <Image Name="LoadedImage" Margin="82,51,66,61" />
-        <Slider Name="ValueSlider" Minimum="0" Maximum="100" ValueChanged="ValueSlider_ValueChanged" TickFrequency="1" IsSnapToTickEnabled="True"
-                HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="340"/>
+        <Image Name="LoadedImage" Margin="74,56,66,61" />
+        <Slider Name="ValueSlider" Minimum="0" Maximum="99" ValueChanged="ValueSlider_ValueChanged" TickFrequency="1" IsSnapToTickEnabled="True"
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="340" Margin="5"/>
         <TextBlock Name="SliderValueText" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,20" FontSize="16"/>
     </Grid>
 </Window>
